@@ -26,6 +26,7 @@ import java.util.Set;
 
 import org.drools.core.common.InternalFactHandle;
 import org.drools.base.factmodel.traits.CoreWrapper;
+import org.drools.base.factmodel.traits.Thing;
 import org.drools.base.factmodel.traits.TraitField;
 import org.drools.base.factmodel.traits.Traitable;
 import org.drools.base.factmodel.traits.TraitableBean;
@@ -66,12 +67,8 @@ public class LogicalTraitTest extends CommonTraitTest {
     public VirtualPropertyMode mode;
 
     @Parameterized.Parameters
-    public static Collection modes() {
-        return Arrays.asList( new VirtualPropertyMode[][]
-                                      {
-                                              { VirtualPropertyMode.MAP },
-                                              { VirtualPropertyMode.TRIPLES }
-                                      } );
+    public static Collection<VirtualPropertyMode> modes() {
+        return List.of(VirtualPropertyMode.MAP, VirtualPropertyMode.TRIPLES);
     }
 
     public LogicalTraitTest( VirtualPropertyMode m ) {
@@ -80,7 +77,7 @@ public class LogicalTraitTest extends CommonTraitTest {
 
 
     @Test
-    public void testShadowAlias() {
+    public void testShadowAlias() throws Exception {
 
         KnowledgeBuilder kbuilderImpl = KnowledgeBuilderFactory.newKnowledgeBuilder();
         kbuilderImpl.add( ResourceFactory.newClassPathResource( "org/drools/compiler/factmodel/traits/testTraitedAliasing.drl" ), ResourceType.DRL );
@@ -94,7 +91,7 @@ public class LogicalTraitTest extends CommonTraitTest {
 
         KieSession ks = kbase.newKieSession();
 
-        ArrayList list = new ArrayList(  );
+        List<Object> list = new ArrayList<>(  );
         ks.setGlobal( "list", list );
 
         ks.fireAllRules();
@@ -103,15 +100,11 @@ public class LogicalTraitTest extends CommonTraitTest {
             LOGGER.debug( o.toString() );
         }
 
-        try {
-            ks = SerializationHelper.getSerialisedStatefulKnowledgeSession(ks, true );
-        } catch ( Exception e ) {
-            fail( e.getMessage(), e );
-        }
+        ks = SerializationHelper.getSerialisedStatefulKnowledgeSession(ks, true );
 
         LOGGER.debug( list.toString() );
-        assertThat(list.contains(false)).isFalse();
-        assertThat(list.size()).isEqualTo(8);
+        assertThat(list).doesNotContain(Boolean.FALSE);
+        assertThat(list).hasSize(8);
     }
 
 
@@ -165,14 +158,14 @@ public class LogicalTraitTest extends CommonTraitTest {
         TraitFactoryImpl.setMode(mode, (InternalRuleBase) kbase);
 
         KieSession ks = kbase.newKieSession();
-        ArrayList list = new ArrayList();
+        List<String> list = new ArrayList<>();
         ks.setGlobal( "list", list );
 
         ks.fireAllRules();
         for ( Object o : ks.getObjects() ) {
             LOGGER.debug( o.toString() );
         }
-        assertThat(list).isEqualTo(List.of("ok"));
+        assertThat(list).containsExactly("ok");
 
         try {
             ks = SerializationHelper.getSerialisedStatefulKnowledgeSession( ks, true );
@@ -241,14 +234,14 @@ public class LogicalTraitTest extends CommonTraitTest {
         TraitFactoryImpl.setMode(mode, (InternalRuleBase) kbase);
 
         KieSession ks = kbase.newKieSession();
-        ArrayList list = new ArrayList();
+        List<String> list = new ArrayList<>();
         ks.setGlobal( "list", list );
 
         ks.fireAllRules();
         for ( Object o : ks.getObjects() ) {
             LOGGER.debug( o.toString() );
         }
-        assertThat(list).isEqualTo(Arrays.asList("ok1", "ok2"));
+        assertThat(list).containsExactly("ok1", "ok2");
 
         try {
             ks = SerializationHelper.getSerialisedStatefulKnowledgeSession( ks, true );
@@ -314,14 +307,14 @@ public class LogicalTraitTest extends CommonTraitTest {
         TraitFactoryImpl.setMode(mode, (InternalRuleBase) kbase);
 
         KieSession ks = kbase.newKieSession();
-        ArrayList list = new ArrayList();
+        List<String> list = new ArrayList<>();
         ks.setGlobal( "list", list );
 
         ks.fireAllRules();
         for ( Object o : ks.getObjects() ) {
             LOGGER.debug( o.toString() );
         }
-        assertThat(list).isEqualTo(List.of("ok"));
+        assertThat(list).containsExactly("ok");
 
         try {
             ks = SerializationHelper.getSerialisedStatefulKnowledgeSession( ks, true );
@@ -391,8 +384,8 @@ public class LogicalTraitTest extends CommonTraitTest {
         TraitFactoryImpl.setMode(mode, knowledgeBase );
 
         KieSession knowledgeSession = knowledgeBase.newKieSession();
-        ArrayList list = new ArrayList();
-        ArrayList list2 = new ArrayList();
+        List<String> list = new ArrayList<>();
+        List<Integer> list2 = new ArrayList<>();
         knowledgeSession.setGlobal( "list", list );
         knowledgeSession.setGlobal( "list2", list2 );
 
@@ -404,8 +397,8 @@ public class LogicalTraitTest extends CommonTraitTest {
 
         LOGGER.debug( list.toString() );
         LOGGER.debug( list2.toString() );
-        assertThat(list).isEqualTo(Arrays.asList("1", null, "xyz", "xyz", "7", "aaa"));
-        assertThat(list2).isEqualTo(Arrays.asList(18, null, 37, 99, 37));
+        assertThat(list).containsExactly("1", null, "xyz", "xyz", "7", "aaa");
+        assertThat(list2).containsExactly(18, null, 37, 99, 37);
 
         try {
             knowledgeSession = SerializationHelper.getSerialisedStatefulKnowledgeSession( knowledgeSession, true );
@@ -473,8 +466,8 @@ public class LogicalTraitTest extends CommonTraitTest {
         TraitFactoryImpl.setMode(mode, knowledgeBase );
 
         KieSession knowledgeSession = knowledgeBase.newKieSession();
-        ArrayList list = new ArrayList();
-        ArrayList list2 = new ArrayList();
+        List<Double> list = new ArrayList<>();
+        List<Integer> list2 = new ArrayList<>();
         knowledgeSession.setGlobal( "list", list );
         knowledgeSession.setGlobal( "list2", list2 );
 
@@ -486,8 +479,8 @@ public class LogicalTraitTest extends CommonTraitTest {
 
         LOGGER.debug( list.toString() );
         LOGGER.debug( list2.toString() );
-        assertThat(list).isEqualTo(Arrays.asList(1.0, 0.0, 16.3, 16.3, 0.0, -0.72));
-        assertThat(list2).isEqualTo(Arrays.asList(18, 0, 37, 99, 0));
+        assertThat(list).containsExactly(1.0, 0.0, 16.3, 16.3, 0.0, -0.72);
+        assertThat(list2).containsExactly(18, 0, 37, 99, 0);
 
         try {
             knowledgeSession = SerializationHelper.getSerialisedStatefulKnowledgeSession( knowledgeSession, true );
@@ -556,24 +549,20 @@ public class LogicalTraitTest extends CommonTraitTest {
         TraitFactoryImpl.setMode(mode, knowledgeBase );
 
         KieSession knowledgeSession = knowledgeBase.newKieSession();
-        ArrayList list = new ArrayList();
+        List<Integer> list = new ArrayList<>();
         knowledgeSession.setGlobal( "list", list );
 
         knowledgeSession.fireAllRules();
-        assertThat(list).isEqualTo(Arrays.asList(42));
+        assertThat(list).containsExactly(42);
 
         knowledgeSession.insert( "x" );
         knowledgeSession.fireAllRules();
 
-        boolean found = false;
-        for ( Object o : knowledgeSession.getObjects( new ClassObjectFilter( Qty.class ) ) ) {
-            assertThat(((Qty) o).getNum()).isEqualTo((Integer) 99);
-            assertThat(((CoreWrapper) o)._getFieldTMS().get("num", Integer.class)).isEqualTo(99);
-            found = true;
-        }
-        assertThat(found).isTrue();
+        Object o  = knowledgeSession.getObjects(new ClassObjectFilter(Qty.class)).iterator().next();
+        assertThat(((Qty) o).getNum()).isEqualTo((Integer) 99);
+        assertThat(((CoreWrapper) o)._getFieldTMS().get("num", Integer.class)).isEqualTo(99);
 
-        assertThat(list).isEqualTo(Arrays.asList(42, 99));
+        assertThat(list).containsExactly(42, 99);
         knowledgeSession.dispose();
     }
 
@@ -783,7 +772,7 @@ public class LogicalTraitTest extends CommonTraitTest {
         TraitFactoryImpl.setMode(mode, (InternalRuleBase) kbase);
 
         KieSession ks = kbase.newKieSession();
-        ArrayList list = new ArrayList();
+        List<String> list = new ArrayList<>();
         ks.setGlobal( "list", list );
 
         ks.fireAllRules();
@@ -873,7 +862,7 @@ public class LogicalTraitTest extends CommonTraitTest {
 
         KieSession ks = kbase.newKieSession();
 
-        ArrayList list = new ArrayList();
+        List<String> list = new ArrayList<>();
         ks.setGlobal( "list", list );
 
         int n = ks.fireAllRules();
@@ -985,13 +974,13 @@ public class LogicalTraitTest extends CommonTraitTest {
         TraitFactoryImpl.setMode(mode, (InternalRuleBase) kbase);
 
         KieSession ks = kbase.newKieSession();
-        ArrayList list = new ArrayList();
+        List<String> list = new ArrayList<>();
         ks.setGlobal( "list", list );
 
         FactHandle handle = ks.insert( "go" );
 
         ks.fireAllRules();
-        assertThat(list).isEqualTo(List.of("ok"));
+        assertThat(list).containsExactly("ok");
 
         for ( Object o : ks.getObjects() ) {
             LOGGER.debug( o  + " >> " + ((InternalFactHandle)ks.getFactHandle( o )).getEqualityKey() );
@@ -1001,16 +990,16 @@ public class LogicalTraitTest extends CommonTraitTest {
         ks.fireAllRules();
 
         for ( Object o : ks.getObjects( new ClassObjectFilter( ks.getKieBase().getFactType( "org.drools.test", "Y" ).getFactClass() ) ) ) {
-            assertThat(o instanceof TraitableBean).isTrue();
+            assertThat(o).isInstanceOf(TraitableBean.class);
             TraitableBean tb = (TraitableBean) o;
 
             TraitField fld = tb._getFieldTMS().getRegisteredTraitField("fld" );
             Set<Class<?>> types = fld.getRangeTypes();
-            assertThat(types.size()).isEqualTo(2);
+            assertThat(types).hasSize(2);
 
             TraitField fld2 = tb._getFieldTMS().getRegisteredTraitField("fld2" );
             Set<Class<?>> types2 = fld2.getRangeTypes();
-            assertThat(types2.size()).isEqualTo(1);
+            assertThat(types2).hasSize(1);
         }
 
         try {
@@ -1026,7 +1015,7 @@ public class LogicalTraitTest extends CommonTraitTest {
 
         LOGGER.debug( list.toString() );
 
-        assertThat(list).isEqualTo(Arrays.asList("ok", "ok2", "ok3"));
+        assertThat(list).containsExactly("ok", "ok2", "ok3");
 
     }
 
@@ -1109,19 +1098,19 @@ public class LogicalTraitTest extends CommonTraitTest {
         TraitFactoryImpl.setMode(mode, (InternalRuleBase) kbase);
 
         KieSession ks = kbase.newKieSession();
-        ArrayList list = new ArrayList();
+        List<Integer> list = new ArrayList<>();
         ks.setGlobal( "list", list );
 
         FactHandle handle = ks.insert( "go" );
 
         ks.fireAllRules();
-        assertThat(list).isEqualTo(Arrays.asList(1, 2));
+        assertThat(list).containsExactly(1, 2);
 
         ks.retract( handle );
         ks.fireAllRules();
 
         for ( Object o : ks.getObjects( new ClassObjectFilter( ks.getKieBase().getFactType( "org.drools.test", "Y" ).getFactClass() ) ) ) {
-            assertThat(o instanceof TraitableBean).isTrue();
+            assertThat(o).isInstanceOf(TraitableBean.class);
         }
 
         try {
@@ -1131,7 +1120,7 @@ public class LogicalTraitTest extends CommonTraitTest {
         }
 
         LOGGER.debug( list.toString() );
-        assertThat(list).isEqualTo(Arrays.asList(1, 2, 1, 2));
+        assertThat(list).containsExactly(1, 2, 1, 2);
 
     }
 
@@ -1177,7 +1166,7 @@ public class LogicalTraitTest extends CommonTraitTest {
         TraitFactoryImpl.setMode(mode, (InternalRuleBase) kbase);
 
         KieSession ks = kbase.newKieSession();
-        ArrayList list = new ArrayList();
+        List list = new ArrayList();
         ks.setGlobal( "list", list );
 
         ks.fireAllRules();
@@ -1241,11 +1230,11 @@ public class LogicalTraitTest extends CommonTraitTest {
         KieSession ksession = loadKnowledgeBaseFromString(drl).newKieSession();
         TraitFactoryImpl.setMode(mode, ksession.getKieBase());
 
-        List list = new ArrayList();
+        List<Thing> list = new ArrayList<>();
         ksession.setGlobal("list",list);
         ksession.fireAllRules();
 
-        assertThat(list.size() == 1 && list.contains(null)).isTrue();
+        assertThat(list).hasSize(1).containsNull();
     }
 
     @Test
@@ -1295,11 +1284,11 @@ public class LogicalTraitTest extends CommonTraitTest {
         KieSession ksession = loadKnowledgeBaseFromString(drl).newKieSession();
         TraitFactoryImpl.setMode(mode, ksession.getKieBase());
 
-        List list = new ArrayList();
+        List<Thing> list = new ArrayList<>();
         ksession.setGlobal("list",list);
         ksession.fireAllRules();
 
-        assertThat(list.size() == 1 && list.contains(null)).isTrue();
+        assertThat(list).hasSize(1).containsNull();
     }
 
     @Test
@@ -1349,13 +1338,13 @@ public class LogicalTraitTest extends CommonTraitTest {
         KieSession ksession = loadKnowledgeBaseFromString(drl).newKieSession();
         TraitFactoryImpl.setMode(mode, ksession.getKieBase());
 
-        List list = new ArrayList();
+        List<Object> list = new ArrayList<>();
         ksession.setGlobal("list",list);
         ksession.fireAllRules();
 
         LOGGER.debug( "list" + list );
 
-        assertThat(list.size()).isEqualTo(1);
+        assertThat(list).hasSize(1);
         assertThat(list.get(0).getClass().getName()).isEqualTo("org.drools.base.factmodel.traits.test.Bar");
     }
 }
